<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <!-- Package metadata -->
  <name>smart_car</name>
  <version>0.0.0</version>
  <description>SmartCAR ROS2 Package for Final Assignment</description>
  
  <!-- Maintainer information -->
  <maintainer email="r.kim@student.han.nl">Roman Kim</maintainer>
  
  <!-- License type -->
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  
  <!-- Test dependencies for quality assurance -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Exported information for the package build system -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>

